<resources>
    <string name="app_name">Inventory App</string>
    <string name="log_in">Log in</string>
    <string name="username">Username</string>
    <string name="inventory_app">Inventory App</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="create_account">Create Account</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="inventory_list">Inventory List</string>
    <string name="Delete">Delete</string>
    <string name="additem">addItem</string>
    <string name="sms_permission_request">This app needs permission to communicate with SMS
        messaging in order to provide automated system notifications about low inventory.</string>
    <string name="request_permissions_button">Request Permissions</string>
    <string name="stockpile">StockPile</string>
    <string name="stock">Stock</string>
    <string name="pile">Pile</string>
    <string name="new_username">New Username</string>
    <string name="green_star">green_star</string>
    <string name="new_password">New Password</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="new_account">New Account</string>
    <string name="enter_item">Enter Item</string>
    <string name="which_item_would_you_like_to_add">Which item would you like to add?</string>
    <string name="add_item">Add Item</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="AddItem">Add Item</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="item">Item</string>
    <string name="_25">25</string>
    <string name="_1">1</string>
</resources>